Employee Project/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\Java\jdk1.7.0_45\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.7
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.8.2.jar;C:\Programming\Employee Project
-d
C:\Programming\Employee Project\doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
C:\Program Files\BlueJ\lib\bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
C:\Programming\Employee Project\Employee.java
<---- end of javadoc command ---->
Loading source file C:\Programming\Employee Project\Employee.java...
Constructing Javadoc information...
C:\Programming\Employee Project\Employee.java:14: error: cannot find symbol
    public Employee (string name, double currentSalary)
                     ^
  symbol:   class string
  location: class Employee
C:\Programming\Employee Project\Employee.java:18: error: cannot find symbol
    public string getName ()
           ^
  symbol:   class string
  location: class Employee
Standard Doclet version 1.7.0_45
Building tree for all the packages and classes...
Generating C:\Programming\Employee Project\doc\Employee.html...
C:\Programming\Employee Project\Employee.java:14: warning - @param tag has no arguments.
C:\Programming\Employee Project\Employee.java:14: warning - @param argument "" is not a parameter name.
Generating C:\Programming\Employee Project\doc\package-frame.html...
Generating C:\Programming\Employee Project\doc\package-summary.html...
Generating C:\Programming\Employee Project\doc\constant-values.html...
Building index for all the packages and classes...
Building index for all classes...
Generating C:\Programming\Employee Project\doc\allclasses-frame.html...
Generating C:\Programming\Employee Project\doc\allclasses-noframe.html...
Generating C:\Programming\Employee Project\doc\index.html...
Generating C:\Programming\Employee Project\doc\stylesheet.css...
4 warnings
